@@ -5,4 +5,3 @@
 # Don't modify this file.
 
 require "optparse"
-require "irb/locale"
